@@ -258,6 +258,20 @@ public class DefaultInputHandler extends InputHandler
 			currentBindings = (Hashtable)o;
 			evt.consume();
 		}
+
+		switch(evt.getKeyCode())
+		{
+			case KeyEvent.VK_NUMPAD0:   case KeyEvent.VK_NUMPAD1:
+			case KeyEvent.VK_NUMPAD2:   case KeyEvent.VK_NUMPAD3:
+			case KeyEvent.VK_NUMPAD4:   case KeyEvent.VK_NUMPAD5:
+			case KeyEvent.VK_NUMPAD6:   case KeyEvent.VK_NUMPAD7:
+			case KeyEvent.VK_NUMPAD8:   case KeyEvent.VK_NUMPAD9:
+			case KeyEvent.VK_MULTIPLY:  case KeyEvent.VK_ADD:
+			/* case KeyEvent.VK_SEPARATOR: */ case KeyEvent.VK_SUBTRACT:
+			case KeyEvent.VK_DECIMAL:   case KeyEvent.VK_DIVIDE:
+				KeyEventWorkaround.numericKeypadKey();
+				break;
+		}
 	} //}}}
 
 	//{{{ keyTyped() method
