@@ -6290,20 +6290,21 @@ loop:			for(int i = lineNo + 1; i < getLineCount(); i++)
 			int dot = xyToOffset(evt.getX(),
 				Math.max(0,Math.min(painter.getHeight(),evt.getY())),
 				!painter.isBlockCaretEnabled());
-			if(dot == caret)
-				return;
 
 			dragged = true;
 
-			resizeSelection(dragStart,dot,rect);
-
-			if(!quickCopyDrag)
-				moveCaretPosition(dot,false);
-			else
+			if(quickCopyDrag)
 			{
+				resizeSelection(dragStart,dot,rect);
 				// just scroll to the dragged location
 				int line = buffer.getLineOfOffset(dot);
 				scrollTo(line,dot - buffer.getLineStartOffset(line),false);
+			}
+			else
+			{
+				if(dot == caret)
+					return;
+				moveCaretPosition(dot,false);
 			}
 		} //}}}
 
